# Robomuse-4.0

./: README.md
phantomx_reactor_arm_controller/: CMakeLists.txt  package.xml
phantomx_reactor_arm_controller/config/: 57-reactor_arbotix.rules
phantomx_reactor_arm_controller/src/: dynamixel_joint_state_publisher.py  move_arm_server.py  moveit_sub.py  phantomx_reactor_gripper.py  print_traj.py  update_pos_client.py  update_pos_server.py  update_pos_server_traj.py
phantomx_reactor_arm_controller/srv/: UpdatePos.srv
phantomx_reactor_arm_description/launch/: gazebo.launch
phantomx_reactor_arm_description/urdf/: phantomx_reactor_no_wrist.urdf.xacro  (+2 more)
robomuse_control/: CMakeLists.txt  arm_control_plugins.xml  package.xml
robomuse_gazebo/: CMakeLists.txt  package.xml  pose
robomuse_gazebo/aruco_visual_marker_7/: model.sdf
robomuse_gazebo/launch/: ridgeback_world.launch  robomuse_collab.launch  robomuse_world.launch  screen_world.launch
robomuse_gazebo/src/: aruco_detect.py  base_footprint_tf_publisher.py  get_transform.py  manuj.py  move_arm_server.py  move_bot.py  move_group_python.py  move_group_python_demo.py  move_group_python_initial.py  pick_and_place.sh  pos_node.py  poses  processor.py  webcam.py
robomuse_gazebo/src/object/: model.config  model.sdf
robomuse_gazebo/src/srv/: MoveArm.srv
robomuse_gazebo/textured_shapes/: model.config  model.sdf
robomuse_gazebo/textured_shapes/materials/scripts/: textures.material
robomuse_gazebo/worlds/: ridgeback_race.world
robomuse_moveit_config/: CMakeLists.txt  package.xml
(+54 files in other folders)
